--- a/fly.toml
+++ b/fly.toml
@@ -6,6 +6,8 @@ kill_timeout = 5
 processes = []
 
 [env]
+  RACK_ENV = "production"
+  RAILS_ENV = "production"
 
 [experimental]
   auto_rollback = true
