Scale process concurrency to 1 to save memory

--- a/fly.toml
+++ b/fly.toml
@@ -10,6 +10,8 @@ processes = []
   RACK_ENV = "production"
   RAILS_ENV = "production"
   REDIS_PROVIDER = "REDIS_URL"
+  WEB_CONCURRENCY = "1"
+  MAX_THREADS = "5"
 
 [experimental]
   auto_rollback = true
