--- a/fly.toml
+++ b/fly.toml
@@ -6,6 +6,7 @@ kill_timeout = 5
 processes = []
 
 [env]
+  PORT = "3000"
   RACK_ENV = "production"
   RAILS_ENV = "production"
   REDIS_PROVIDER = "REDIS_URL"
